--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,255 +1,520 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
-
+* {
+	margin:0;
+	padding:0;
+}
 body {
-  padding:50px;
-  font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#777;
-  font-weight:300;
+	font-family:Georgia, Arial;
+	background-image: url(../images/bg_banner.jpg);
+	background-position:top left;
+	background-repeat:repeat;
+	text-align:center;
+	font-size: x-small;
+	voice-family: "\"}\"";
+	voice-family: inherit;
+	font-size:small; /* für andere Browser */
 }
-
-h1, h2, h3, h4, h5, h6 {
-  color:#222;
-  margin:0 0 20px;
+* html body {
+	font-size:x-small;
+	f\ont-size:small;
 }
-
-p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
+html>body { /*für Opera*/
+	font-size:small;
 }
-
-h1, h2, h3 {
-  line-height:1.1;
+/*   =Wrapper 
+------------------------------------------------------*/
+#wrapper {
+	width:860px;
+	margin:0 auto;
+	padding: 0px;
+	background: #eeeeee;
+	text-align:center;
 }
+/*End Wrapper */
 
 h1 {
-  font-size:28px;
+	font-size:160%;
+	color:#ffffff;
+	margin-bottom:10px;
 }
-
-h2 {
-  color:#393939;
+#sidebar h2 {
+	font-size:110%;
+	color:#609a27;
+	border-bottom:1px solid #609a27;
+	margin-bottom:5px;
+	margin-left:0px;
 }
+p {
+	/*font-size:120%;*/
+	margin-bottom:20px;
 
-h3, h4, h5, h6 {
-  color:#494949;
 }
-
+ul {
+	list-style:none;
+}
 a {
-  color:#39c;
-  font-weight:400;
-  text-decoration:none;
+	color:#000000;
+	text-decoration:none;
+}
+a:hover {
+	color:#b10909;
+}
+a[href^="http:"] {
+	background:url(../images/link_extern.png) no-repeat right top;
+	padding-right:10px;
+	text-decoration:underline;
 }
 
-a small {
-  font-size:11px;
-  color:#777;
-  margin-top:-0.6em;
-  display:block;
+#tooltip {
+	cursor:help;
+	padding-right:10px;
+	background:url(../images/question.png) no-repeat right top;
+	}
+
+
+/* =MastHead der Header Bereich
+----------------------------------------------------*/
+#masthead {
+	position:relative;
+	text-align:left;
+	background: #c02121 url(../images/rounded_corner.png) bottom left repeat-x;
+	height:115px;
+	z-index:2;
+}
+#logo {
+	text-align:right;
+	height:100px;
+	background:url(../images/logo.png) no-repeat left center;
+	width:100%;
+	padding-top:10px;
+}
+#headline {
+	position:relative;
+	top:-10px;
+	left:550px;
+	width:300px;
+	height:50px;	
+	background: url(../images/hochschul_headline.png) top left no-repeat;
+}
+#logo #meisterbanner {
+	position:relative;
+	top:-10px;
+	left:783px;
+	width:77px;
+	height:50px;
+	background:url(../images/meisterbanner.png) top left no-repeat;
+}
+#masthead h1 {
+	font-size:200%;
+	text-align:center;
+	margin-top:1.3em;
+}
+#masthead p img {
+	border: 2px solid #ffffff;
+	margin-top:0.3em;
+	text-align:center;
+
+}
+#masthead p {
+	text-align:center;
+	margin:0;
+	padding:0;
+}
+#head {
+
+	text-align:center;
+	background:url(../images/head-bg-grad.png) repeat-x top left;
+	height:9.5em;
+
+}
+#head:after{
+	content:".";
+	display:block;
+	height:0;
+	clear:both;
+	visibility:hidden;
+}
+#head li{
+	float:left;
+	text-align:left;
+	width:40%;
+}
+#head li.center {
+	width:19%;
 }
 
-.wrapper {
-  width:860px;
-  margin:0 auto;
+/* = Navigation 
+--------------------------------*/
+#nav{
+	position:relative;
+	padding-left:25px;
+	font-size:16pt;
+	font-weight:bold;
+	background:#eeeeee;
+}
+#nav:after {
+	content:".";
+	display:block;
+	height:0;
+	clear:both;
+	visibility:hidden;
+}
+#nav li {
+	float:left;
+	display:inline;
+}
+#nav a {
+	display:block;
+	padding:0 1em;
+	float:left;
+	line-height:1.8em;
+	text-decoration:none;
+	color:#777777;
+	font-weight:bold;
+	letter-spacing:-0.06em;
 }
 
-blockquote {
-  border-left:1px solid #e5e5e5;
-  margin:0;
-  padding:0 0 0 20px;
-  font-style:italic;
+#nav a:hover,#nav .selected  a{
+	background: url(../images/nav.gif) bottom center no-repeat;
+	z-index:3;
+}
+#nav a:hover {
+	color:#333333;
+}
+#nav .selected a {
+	cursor:default;
+	color:#b20b0b;
+}
+#nav #team {
+	padding-left:25px;
+	background: url(../images/team.png) top left no-repeat;
+}
+#nav #cose {
+	padding-left:17px;
+	background: url(../images/cose_nav.png) top left no-repeat;
 }
 
-code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  color:#333;
-  font-size:12px;
+/**
+#nav li.selected  {
+	background: #8ccb4d;
+}**/
+.clear {
+	clear:both;
 }
 
-pre {
-  padding:8px 15px;
-  background: #f8f8f8;  
-  border-radius:5px;
-  border:1px solid #e5e5e5;
-  overflow-x: auto;
+
+/* =Content 
+------------------------------*/
+#content{
+	padding-top:10px;
+	float:left;
+	width:70%;
+	background:#609a27; /*url(../images/rounded_corner_green.png) top left repeat-x;*/
+	text-align:center;
+}
+#content p {
+	letter-spacing:0.05em;
+	color:#333333;
+	font-weight:bold;
+	font-size:110%;
+}
+#content h1 {
+	font-size:250%;
+	letter-spacing:-0.05em;
+}
+#content h2 {
+	color:#ffffff;
+	font-size:130%;
+	letter-spacing:-1;
+	padding-bottom:5px;
+	font-weight:bold;
+
+}
+#content a[href^="http:"] {
+	background:url(../images/link_extern_red.png) no-repeat right top;
+	padding-right:10px;
+	color:#ffffff;
+	text-decoration:underline;
 }
 
-table {
-  width:100%;
-  border-collapse:collapse;
+/*=Sidebar
+-------------------------------------
+*/
+#sidebar {
+	float:left;
+	width:30% !important;
+	width:29.9%;
+	background:#eeeeee;
+	text-align:center;
+	padding-right:0px;
+}
+#sidebar dl{
+	margin:0;
+	padding:0;
+	margin-top:5px;
+	border-bottom:1px solid #d9d4c5;		
+	border-top:1px solid #f3f1ea;	
+}
+#sidebar dt {
+	margin:0;
+	padding:0;
+	font-size:130%;
+	letter-spacing:-0.03em;
+	color:#609a27;
+	border-bottom:1px solid #609a27;
+	/*background:url(../images/rounded_corner_green_small.png) bottom left repeat-x;*/
+	margin-bottom:5px;
+	margin-left:0px;
+}
+#sidebar dt img {
+	top:10px;
+}
+#sidebar dt a {
+	color:#609a27;
+	text-decoration:none;
+}
+#sidebar dd{
+	padding-left:10px;
+	color:#777777;
+}
+#sidebar li {
+	background:url(../images/ball.png)no-repeat 0 50%;
+	padding:5px 0 5px 30px;
+	border-top:1px solid #f3f1ea;	
+
+}
+#sidebar ul {
+	margin-bottom:5px;
+	border-top:1px solid #f3f1ea;	
+
+}
+#sidebar p.news {
+	font-size:90%;
+	padding-left:10px;
+	border-top:1px solid #f3f1ea;	
+
+}
+#sidebar .weather {
+	font-size:80%;
 }
 
-th, td {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
+
+#sidebar dl.weathertmp {
+
+
 }
 
-dt {
-  color:#444;
-  font-weight:700;
+
+#sidebar #condImg {
+	width:30px;
+	height:30px;
+}
+#sidebar #field {
+	background: url(../images/field.png) no-repeat top left;
+	height:140px;
+	width:165px;
 }
 
-th {
-  color:#444;
+
+#sidebar #condition,#condImage,#temp {
+	float:left;	
+}
+.teamplayer {
+	background:#919191;
+	width:100%;
+}
+table#standings {
+	margin-left:5px;
+	font-size:80%;
+	border-collapse:collapse;
+	border:1px solid #eeeeee;
+	background:#fff;
+	width: 90%;
+
+}
+#standings th {
+	font: bold 10px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+	color: #6C8F49;/*4f6b72;*/
+	border-right: 1px solid #8ccb4d;
+	border-bottom: 1px solid #8ccb4d;
+	border-top: 1px solid #8ccb4d;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	text-align: left;
+	padding: 2px 2px 2px 4px;
+	background: #b2fd67 url(../images/bg_header.jpg) no-repeat;
+}
+#standings td{
+	border-right: 1px solid #8ccb4d;
+	border-bottom: 1px solid #8ccb4d;
+	background: #fff;
+	padding: 6px 6px 6px 6px;
+	color: #4f6b72;
+}
+#standings .odd{
+	background:url(../images/tablegrid.png) top left repeat-x;
+}
+#standings col {
+	border-right:1px solid #ccc;
+}
+#standings col #pos {
+	text-align:center;
+}
+.shell {
+	margin:0 auto;
+	width:85%;
+	text-align:left;
+}
+p.box {
+	background:#ddccaa;
+	border:1px solid #c1c1c1;
+	font-size:150%;
+	font-weight:bold;
+}
+p.cs {
+	border:1px solid #c1c1c1;
+	font-size:150%;
+	font-weight:bold;
+	background:#ddccaa url(../images/cs.png) 10px 3px no-repeat;
+	text-align:center;
+	height:60px;
+	padding-top:5px;
+	padding-left:23px;
+}
+p.cs img {
+	padding-left:5px;
+}
+#teambox {
+	width:34%;
+	margin-right:15%;
+	margin-left:6%;
+	height:90px;
+	background:#ddccaa;
+	float:left;
+	border:1px solid #c1c1c1;
+}
+#teambox2 {
+	float:left;
+	width:34%;
+	margin-right:10%;
+	height:90px;
+	background:#ddccaa;
+	border:1px solid #c1c1c1;
+}
+#teambox2:after {
+	content:".";
+	display:block;
+	height:0;
+	clear:both;
+	visibility:hidden;
 }
 
-img {
-  max-width:100%;
+table#player {
+	position:relative;
+	top:-4px;
+	left:-4px;
+	border-collapse:collapse;
+	border:1px solid #eeeeee;
+	font-size:90%;
+	background:#fff;
+}
+#player caption {
+	font-size:100%;
+	font-weight:bold;
+	margin:1em 0;
+}
+#player tr:hover {
+	background: #ccc;
+}
+#player th {
+	font: bold 11px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+	color: #6C8F49;/*4f6b72;*/
+	border-right: 1px solid #8ccb4d;
+	border-bottom: 1px solid #8ccb4d;
+	border-top: 1px solid #8ccb4d;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	text-align: left;
+	padding: 6px 6px 6px 12px;
+	background: #b2fd67 url(../images/bg_header.jpg) no-repeat;
 }
 
-header {
-  width:270px;
-  float:left;
-  position:fixed;
+#player td {
+	border-right: 1px solid #8ccb4d;
+	border-bottom: 1px solid #8ccb4d;
+	background: #fff;
+	padding: 6px 6px 6px 12px;
+	color: #4f6b72;
+}
+#player tr.odd{
+	background:url(../images/tablegrid.png) top left repeat-x;
+}
+#player col {
+	border-right:1px solid #ccc;
+}
+#player col #pos {
+	text-align:center;
+}
+#player .teamsmall {
+	font-size:80%;
+}
+col #nr {
+	text-align:center;
+}
+#player img {
+	border: 2px solid #cccccc;
+}
+#player .tooltip{
+	position:relative;
+	cursor:help;
+	background:url(../images/question.png) no-repeat right top;
+	padding-right:10px;
+}
+#player_file dt {
+	font-size:13pt;
+	color:#ffffff;
+	font-weight:bold;
+	margin-top:20px;
+	margin-bottom:5px;
+	border-bottom:1px solid #ffffff;
+}
+#player_infos {
+	float:left;
+}
+#pl_photo_border {
+	width:150px;
+	padding:6px;
+	background:#ffffff;
+	border:2px solid #dfdfdf;
+}
+#playerphoto img{
+	border:1px solid #dddddd;
+}
+#playerdescription {
+	width:400px;
+	display:block;
 }
 
-header ul {
-  list-style:none;
-  height:40px;
-  
-  padding:0;
-  
-  background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  
-  border-radius:5px;
-  border:1px solid #d2d2d2;
-  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
-  width:270px;
-}
 
-header li {
-  width:89px;
-  float:left;
-  border-right:1px solid #d2d2d2;
-  height:40px;
+#footer {
+	position:relative;
+	padding:8px 0 1em;
+	background:#eeeeee;
+	margin-top:2px;
+	border-top:1px solid #000000;
+	font-size:70%;
 }
-
-header ul a {
-  line-height:1;
-  font-size:11px;
-  color:#999;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:40px;
+#footer p {
+	margin:0;
+	padding:0;
 }
-
-strong {
-  color:#222;
-  font-weight:700;
+#footer a {
+	text-decoration:underline;
+	font-size:110%;
 }
-
-header ul li + li {
-  width:88px;
-  border-left:1px solid #fff;
+#footer a:hover {
+	color:#b20b0b;
 }
-
-header ul li + li + li {
-  border-right:none;
-  width:89px;
-}
-
-header ul a strong {
-  font-size:14px;
-  display:block;
-  color:#222;
-}
-
-section {
-  width:500px;
-  float:right;
-  padding-bottom:50px;
-}
-
-small {
-  font-size:11px;
-}
-
-hr {
-  border:0;
-  background:#e5e5e5;
-  height:1px;
-  margin:0 0 20px;
-}
-
-footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
-}
-
-@media print, screen and (max-width: 960px) {
-  
-  div.wrapper {
-    width:auto;
-    margin:0;
-  }
-  
-  header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
-  }
-  
-  header {
-    padding-right:320px;
-  }
-  
-  section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
-    padding:20px 0;
-    margin:0 0 20px;
-  }
-  
-  header a small {
-    display:inline;
-  }
-  
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
-  }
-}
-
-@media print, screen and (max-width: 720px) {
-  body {
-    word-wrap:break-word;
-  }
-  
-  header {
-    padding:0;
-  }
-  
-  header ul, header p.view {
-    position:static;
-  }
-  
-  pre, code {
-    word-wrap:normal;
-  }
-}
-
-@media print, screen and (max-width: 480px) {
-  body {
-    padding:15px;
-  }
-  
-  header ul {
-    display:none;
-  }
-}
-
-@media print {
-  body {
-    padding:0.4in;
-    font-size:12pt;
-    color:#444;
-  }
+#wrapper,#footer {
+	min-width:740px;
+	max-width:1200px;
 }
